--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "auto-list",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=10.16.2"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
