--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "prettier src/**/*.{ts,tsx,css} --write"
+    "lint": "prettier src/**/*.{ts,tsx,css} --write",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,5 +54,8 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
