adds predeploy script

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
